amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-applied-but-not-declared.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-applied-but-not-declared.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-ast
  Message: Directive MyDirective is not declared
  Severity: Violation
  Target: 
  Property: 
  Range: [(1,7)-(1,43)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive MyDirective cannot be applied to schema
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/directive-applied-but-not-declared.api.graphql#/web-api
  Property: http://a.ml/vocabularies/document#customDomainProperties
  Range: [(1,7)-(1,43)]
  Location: 
